# HUSTDataStructures2019

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: define.h  headers.h
src/set/: set.c
src/sort/: sort.c  sort.h
src/tree/: tree.c  tree.h
